--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>My Resume</title>
-  <link rel="stylesheet" media="screen and (min-width: 800px)" href="css/resume_large.css" type="text/css" />
-  <link rel="stylesheet" media="screen and (max-width: 800px)" href="css/resume_small.css" type="text/css" />
+  <link rel="stylesheet" media="only screen and (min-width: 800px)" href="css/resume_large.css" type="text/css" />
+  <link rel="stylesheet" media="only screen and (max-width: 400px)" href="css/resume_small.css" type="text/css" />
 </head>
 <body>
   <!-- Header -->
